moved most generic code to lib for working in 2D

--- a/1D/notebook.ipynb
+++ b/1D/notebook.ipynb
@@ -19,6 +19,9 @@
    ],
    "source": [
     "# import utilities and plotting\n",
+    "from sys import path\n",
+    "path.append('../lib')\n",
+    "\n",
     "from argparse import Namespace\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -153,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 4.090340584516525s\n"
+      "Elapsed time: 4.206047281622887s\n"
      ]
     },
     {
@@ -203,9 +206,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 4.187918975949287s\n",
+      "Elapsed time: 4.165677711367607s\n",
       "Davidson will consume up to 143912MB of memory.\n",
-      "Elapsed time: 8.154695764183998s\n"
+      "Elapsed time: 8.06312906742096s\n"
      ]
     }
    ],
