--- a/2D/notebook.ipynb
+++ b/2D/notebook.ipynb
@@ -10,13 +10,18 @@
     "# import utilities and plotting\n",
     "from sys import path\n",
     "path.append('../lib')\n",
-    "%matplotlib inline\n",
+    "\n",
+    "%matplotlib notebook\n",
     "from argparse import Namespace\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation\n",
+    "from IPython.display import display\n",
+    "# make figures higher resolution (larger)\n",
     "plt.rcParams['figure.dpi'] = 150\n",
+    "# A decent backend for animations\n",
     "plt.rcParams[\"animation.html\"] = \"jshtml\"\n",
+    "# let 'em get big\n",
     "plt.rcParams[\"animation.embed_limit\"] = 100  # MB\n",
     "\n",
     "%load_ext autoreload\n",
@@ -47,14 +52,54 @@
     "    M_2 = 1.0,\n",
     "    g_1 = 1.0,\n",
     "    g_2 = 1.0,\n",
-    "    NR = 101,\n",
+    "    NR = 150,\n",
     "    Nr = 400,\n",
-    "    Ng = 100,\n",
-    "    extent = (2,4,0,5)\n",
+    "    Ng = 200,\n",
+    "    J = 0\n",
+    "    #extent = (2,4,0,5)  # defaults are (2,4,0,5), but they should be selected better\n",
     ")\n",
     "\n",
     "# build the terms in the Hamiltonian\n",
-    "TR, Tr, Tg, Vgrid, (R,P), (r,p), (g, pg) = fcm.build_terms(args)"
+    "TR, Tr, Tg, Vgrid, Hx, (R,P), (r,p), (g, pg) = fcm.build_terms(args)\n",
+    "\n",
+    "\n",
+    "levels = np.linspace(np.min(Vgrid), np.min(Vgrid) + 0.15, 16) # 0.15 a.u. ~4 eV range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4722fa98-db2b-475f-82e2-36d9354cbec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot many polar slices in R (what the electron sees)\n",
+    "\n",
+    "def init(fig, ax):  # sets up colorbar\n",
+    "    ax.contour(*np.meshgrid(g,r, indexing='ij'), Vgrid[0,:,:].T, levels=levels)\n",
+    "    cs = ax.contourf(*np.meshgrid(g,r, indexing='ij'), Vgrid[0,:,:].T, levels=levels) # dummy contour with filled patches\n",
+    "    cbar = fig.colorbar(cs, orientation='horizontal', fraction=0.05)\n",
+    "    cs.remove()\n",
+    "    cbar.set_label(\"E / a.u.\")\n",
+    "\n",
+    "def animate(t):\n",
+    "    ax.cla()\n",
+    "    ax.contour(*np.meshgrid(g,r, indexing='ij'), Vgrid[t,:,:].T, levels=levels)\n",
+    "    ax.text(np.pi/2,6,f\"R={R[t]:0.03}a₀\", ha='center')\n",
+    "\n",
+    "    ax.grid(axis='x')\n",
+    "    locs=ax.get_xticks()\n",
+    "    labels = [f'{th/np.pi:.03}π' for th in locs]\n",
+    "    ax.set_xticks(locs, labels)\n",
+    "    [limit]=ax.get_yticks()[-1:]\n",
+    "    ax.set_yticks([limit], [f\"r={limit}a₀\"])\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(subplot_kw=dict(projection='polar'))\n",
+    "init(fig, ax)\n",
+    "\n",
+    "ani=matplotlib.animation.FuncAnimation(fig, animate, frames=args.NR)\n",
+    "display(ani)"
    ]
   },
   {
@@ -64,38 +109,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot many slices\n",
+    "# plot many slices, but this time just the radial components\n",
     "fig, ax = plt.subplots()\n",
-    "levels = np.linspace(np.min(Vgrid), 0.08, 16)\n",
-    "\n",
     "def animate(t):\n",
-    "    Vslice = np.copy(Vgrid[:,:,t])\n",
     "    ax.cla()\n",
-    "    ax.contour(*np.meshgrid(R, r, indexing='ij'), Vslice, levels=levels)\n",
+    "    #for c in ax.collections: c.remove\n",
+    "    ax.contour(*np.meshgrid(R, r, indexing='ij'), Vgrid[:,:,t], levels=levels)\n",
+    "    ax.set_xlabel(\"R / a.u.\")\n",
+    "    ax.set_ylabel(\"r / a.u.\")\n",
     "    ax.text(4,8,f\"γ={g[t]/np.pi:0.03}π\")\n",
     "\n",
-    "matplotlib.animation.FuncAnimation(fig, animate, frames=args.Ng)"
+    "ani=matplotlib.animation.FuncAnimation(fig, animate, frames=args.Ng)\n",
+    "display(ani)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cccc3686-be97-41ff-abb9-830b034dad2d",
+   "id": "202eeb26-4603-4846-8325-917728fe26f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot many, but this time polar\n",
-    "fig, ax = plt.subplots()#subplot_kw=dict(projection='polar'))\n",
-    "levels = np.linspace(np.min(Vgrid), 0.08, 16)\n",
-    "\n",
-    "def animate(t):\n",
-    "    Vslice = Vgrid[t,:,:].T\n",
-    "    ax.cla()\n",
-    "    ax.contour(*np.meshgrid(g*180/np.pi, r, indexing='ij'), Vslice, levels=levels)\n",
-    "    #ax.text(4,8,f\"R={R[t]:0.03}\")\n",
-    "\n",
-    "#animate(0)\n",
-    "matplotlib.animation.FuncAnimation(fig, animate, frames=args.NR)"
+    "from hamiltonian import KE, KE_FFT\n",
+    "Nx=5\n",
+    "x=np.linspace(0,1,Nx)\n",
+    "dx=x[1]-x[0]\n",
+    "px  = np.fft.fftshift(np.fft.fftfreq(Nx, dx)) * 2 * np.pi\n",
+    "T_fft = np.real(KE_FFT(Nx, px, x, 1))\n",
+    "T_stn = KE(Nx, dx, 1, stencil_size=3)\n",
+    "print(T_fft)\n",
+    "print(T_stn)\n",
+    "print(T_stn/T_fft)"
    ]
   },
   {
