move Hamiltonian into a class

--- a/2D/notebook-2D.ipynb
+++ b/2D/notebook-2D.ipynb
@@ -3,12 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6fe80a81-d59b-4855-9d71-3ee25ae61eb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# notebook magics\n",
+    "# inline/notebook\n",
+    "%matplotlib notebook\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b9e9c7a4-a59c-4a4c-85f8-13130867629f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import utilities and plotting\n",
-    "%matplotlib notebook\n",
     "from argparse import Namespace\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,9 +33,6 @@
     "plt.rcParams[\"animation.html\"] = \"jshtml\"\n",
     "# let 'em get big\n",
     "plt.rcParams[\"animation.embed_limit\"] = 100  # MB\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "\n",
     "# import our code that we need\n",
     "import fixed_center_of_mass_exact as fcm\n",
@@ -49,6 +59,9 @@
     "    M_2 = 1.0,\n",
     "    g_1 = 1.0,\n",
     "    g_2 = 1.0,\n",
+    "    #NR = 12,\n",
+    "    #Nr = 12,\n",
+    "    #Ng = 12,\n",
     "    NR = 150,\n",
     "    Nr = 400,\n",
     "    Ng = 200,\n",
@@ -57,10 +70,9 @@
     ")\n",
     "\n",
     "# build the terms in the Hamiltonian\n",
-    "TR, Tr, Tg, Vgrid, Hx, (R,P), (r,p), (g, pg) = fcm.build_terms(args)\n",
+    "H = fcm.Hamiltonian(args)\n",
     "\n",
-    "\n",
-    "levels = np.linspace(np.min(Vgrid), np.min(Vgrid) + 0.15, 16) # 0.15 a.u. ~4 eV range"
+    "levels = np.linspace(np.min(H.Vgrid), np.min(H.Vgrid) + 0.15, 16) # 0.15 a.u. ~4 eV range"
    ]
   },
   {
@@ -73,16 +85,16 @@
     "# plot many polar slices in R (what the electron sees)\n",
     "\n",
     "def init(fig, ax):  # sets up colorbar\n",
-    "    ax.contour(*np.meshgrid(g,r, indexing='ij'), Vgrid[0,:,:].T, levels=levels)\n",
-    "    cs = ax.contourf(*np.meshgrid(g,r, indexing='ij'), Vgrid[0,:,:].T, levels=levels) # dummy contour with filled patches\n",
+    "    ax.contour(*np.meshgrid(H.g,H.r, indexing='ij'), H.Vgrid[0,:,:].T, levels=levels)\n",
+    "    cs = ax.contourf(*np.meshgrid(H.g,H.r, indexing='ij'), H.Vgrid[0,:,:].T, levels=levels) # dummy contour with filled patches\n",
     "    cbar = fig.colorbar(cs, orientation='horizontal', fraction=0.05)\n",
     "    cs.remove()\n",
     "    cbar.set_label(\"E / a.u.\")\n",
     "\n",
     "def animate(t):\n",
     "    ax.cla()\n",
-    "    ax.contour(*np.meshgrid(g,r, indexing='ij'), Vgrid[t,:,:].T, levels=levels)\n",
-    "    ax.text(np.pi/2,6,f\"R={R[t]:0.03}a₀\", ha='center')\n",
+    "    ax.contour(*np.meshgrid(H.g,H.r, indexing='ij'), H.Vgrid[t,:,:].T, levels=levels)\n",
+    "    ax.text(np.pi/2,6,f\"R={H.R[t]:0.03}a₀\", ha='center')\n",
     "\n",
     "    ax.grid(axis='x')\n",
     "    locs=ax.get_xticks()\n",
@@ -95,7 +107,7 @@
     "fig, ax = plt.subplots(subplot_kw=dict(projection='polar'))\n",
     "init(fig, ax)\n",
     "\n",
-    "ani=matplotlib.animation.FuncAnimation(fig, animate, frames=args.NR)\n",
+    "ani = matplotlib.animation.FuncAnimation(fig, animate, frames=args.NR)\n",
     "display(ani)"
    ]
   },
@@ -111,47 +123,13 @@
     "def animate(t):\n",
     "    ax.cla()\n",
     "    #for c in ax.collections: c.remove\n",
-    "    ax.contour(*np.meshgrid(R, r, indexing='ij'), Vgrid[:,:,t], levels=levels)\n",
+    "    ax.contour(*np.meshgrid(H.R, H.r, indexing='ij'), H.Vgrid[:,:,t], levels=levels)\n",
     "    ax.set_xlabel(\"R / a.u.\")\n",
     "    ax.set_ylabel(\"r / a.u.\")\n",
-    "    ax.text(4,8,f\"γ={g[t]/np.pi:0.03}π\")\n",
+    "    ax.text(4,8,f\"γ={H.g[t]/np.pi:0.03}π\")\n",
     "\n",
     "ani=matplotlib.animation.FuncAnimation(fig, animate, frames=args.Ng)\n",
     "display(ani)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "202eeb26-4603-4846-8325-917728fe26f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hamiltonian import KE, KE_FFT\n",
-    "Nx=5\n",
-    "x=np.linspace(0,1,Nx)\n",
-    "dx=x[1]-x[0]\n",
-    "px  = np.fft.fftshift(np.fft.fftfreq(Nx, dx)) * 2 * np.pi\n",
-    "T_fft = np.real(KE_FFT(Nx, px, x, 1))\n",
-    "T_stn = KE(Nx, dx, 1, stencil_size=3)\n",
-    "print(T_fft)\n",
-    "print(T_stn)\n",
-    "print(T_stn/T_fft)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0adbe875-eed3-45b1-a944-ee0b04e0704b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "levels = np.linspace(np.min(Vgrid), 0.08, 15)\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.contour(*np.meshgrid(R, r, indexing='ij'), Vgrid, levels=levels)\n",
-    "ax.set_xlabel(\"R / a.u.\")\n",
-    "ax.set_ylabel(\"r / a.u.\")\n",
-    "ax.set_title(\"Potential energy surface\")"
    ]
   },
   {
@@ -230,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b883cb-b877-4176-b6c9-c04c13f76c2f",
+   "id": "beea9a04-f8db-44c1-98cb-17e4325c04f6",
    "metadata": {},
    "outputs": [],
    "source": []
